[package]
name = "contract-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
hex = "0.4.3"
openssl = "0.10.52"
secp256k1 = "0.21"
rlp = "0.5.2"
tiny-keccak = "2.0.2"
tokio = { version = "1.28.1", features = ["full"] }
web3 = { version = "0.18.0", features = ["signing"] }

# crypto = { path = "src/lib/crypto" }
# eth-sdk = { path = "src/lib/eth-sdk" }
